# evalprobe

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: README.md  app.py  requirements.txt
examples/: quickstart.py
examples/data/: results.jsonl  sample.jsonl
src/evalprobe/: __init__.py  cli.py  evaluate.py  llm.py  types.py
src/evalprobe/metrics/: __init__.py  correctness.py  faithfulness.py
src/ragmeter/: __init__.py  cli.py  evaluate.py  types.py
src/ragmeter/metrics/: __init__.py  correctness.py  relevancy.py
tests/: test_cli.py  test_correctness_prompt.py  test_evaluate.py  test_types.py
